--- a/paginas/intalables.html
+++ b/paginas/intalables.html
@@ -64,9 +64,8 @@
             <li> <p class="card-text">  Permite tener diferentes Roles dentro de la plataforma.</p></li>
             <li> <p class="card-text">   Puedan compartirse con la comunidad.</p></li>  
         </ol>
-          <center> <video  autoplay controls src="../videos/PLATAFORMA-CHAMILO.mp4" width="350" height="200"></video></center>  
-          <P></P>
-      
+        <center> <iframe width="350" height="200 " src="https://www.youtube.com/embed/9WRfOesfxZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <P></P>
          <center><a href="https://chamilo.org/es/" class="btn btn-danger">Download</a></center> 
       </div>
       </div>
@@ -87,7 +86,7 @@
             <li> <p class="card-text">Fácil trabajar con él, tanto para el profesorado como el alumnado.</p></li>  
 
         </ol>
-          <center> <video  autoplay controls src="../videos/edmodo.mp4" width="350" height="200"></video></center> 
+        <center> <iframe width="350" height="200 "  src="https://www.youtube.com/embed/5Ou7yHuzSqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
           <p></p>
           <center><a href="https://new.edmodo.com/?language=es" class="btn btn-danger">Download</a></center> 
 
@@ -108,7 +107,8 @@
             <li> <p class="card-text"> Los recursos en los cursos se pueden reutilizar.</p></li>
             <li> <p class="card-text"> La autentificación de los estudiantes es sencilla y segura.</p></li>  
         </ol>
-          <center> <video  autoplay controls src="../videos/Moodle.mp4" width="350" height="200"></video></center>  
+        <center> <iframe width="350" height="200 " src="https://www.youtube.com/embed/jb153BhFENw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+
           <p></p>
           <center><a href="https://moodle.org/?lang=es" class="btn btn-danger">Download</a></center> 
 
